--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: Bump Version
+        description: Image Version
         default: v1.0.0
         required: true
 
@@ -59,7 +59,7 @@ jobs:
           docker build -t ahmedgodaa/product-service:${{ github.event.inputs.version }} .
           docker push ahmedgodaa/product-service:${{ github.event.inputs.version }}
           
-      - name: Build and Push Product Service Docker image
+      - name: Build and Push User Service Docker image
         run: |
           cd user-service
           chmod +x gradlew
